--- a/scss/components/_backdrop.scss
+++ b/scss/components/_backdrop.scss
@@ -12,7 +12,7 @@
   transition: opacity 0.5s, visibility 0.5s;
   &__is-hidden {
     opacity: 0;
-    visibility: hidden; /* Ховає елемент*/
-    pointer-events: none /* Не будуть працювати жодні кліки*/;
+    visibility: hidden;
+    pointer-events: none;
   }
 }
