--- a/scss/components/_modal.scss
+++ b/scss/components/_modal.scss
@@ -1,15 +1,18 @@
 .modal {
-  z-index: 10;
+  z-index: 40;
   position: relative;
   max-width: 580px;
   width: 100%;
   height: 100%;
   max-height: 580px;
-
   background-color: var(--container);
   border-radius: 32px;
   padding: 30px 50px;
   overflow: auto;
+  @media screen and (max-width: $bp-mobile) {
+    padding: 20px;
+    max-height: 480px;
+  }
   &__btns-block {
     padding: 16px;
     border-radius: 12px;
@@ -30,6 +33,9 @@
     text-align: center;
     font-size: 26px;
     color: var(--main-dark);
+    @media screen and (max-width: $bp-mobile) {
+      font-size: 22px;
+    }
   }
   &__btn {
     font-size: 18px;
@@ -56,16 +62,32 @@
   }
   &__field {
     display: flex;
-    justify-content: space-between;
+    align-items: center;
+    gap: 30px;
+    @media screen and (max-width: $bp-mobile) {
+      gap: 10px;
+    }
+  }
+  &__field span {
+    font-size: 18px;
+    @media screen and (max-width: $bp-tablet) {
+      font-size: 16px;
+    }
+    @media screen and (max-width: $bp-mobile) {
+      font-size: 12px;
+    }
   }
   &__field input {
-    width: 300px;
+    width: 100%;
     color: var(--button-hover);
     font-size: 16px;
     border-radius: 6px;
     padding: 6px;
     outline: none;
     border: none;
+    @media screen and (max-width: $bp-mobile) {
+      font-size: 12px;
+    }
   }
   &__field input:focus {
     border: 2px solid var(--main-dark);
