--- a/scss/components/_modal.scss
+++ b/scss/components/_modal.scss
@@ -44,6 +44,7 @@
     background-color: var(--button);
     border-radius: 6px;
     padding: 10px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
   }
   &__btn:hover {
     background-color: var(--button-hover);
@@ -85,6 +86,7 @@
     padding: 6px;
     outline: none;
     border: none;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
     @media screen and (max-width: $bp-mobile) {
       font-size: 12px;
     }
